# BodyMaps-CT-Viewer

./: .env.example  .gitignore  AGENTS.md  README.md  SUBMISSION.md  TESTING.md  pyproject.toml
bodymaps_demo/: __init__.py  app.py  bundle_inference.py  cli.py  config.py  doctor.py  evaluation.py  organ_stats.py  runner.py  storage.py  suprem_inference.py  viewer.py
bodymaps_demo/static/: app.js  index.html  styles.css  viewer-prototypes.css  viewer-prototypes.html  viewer-prototypes.js
scripts/: check.sh  smoke_sample.py
tests/: conftest.py  test_app.py  test_bundle_inference.py  test_config.py  test_suprem_inference.py
