[project]
name = "bodymaps-web-demo"
version = "0.1.0"
description = "Local-first browser workflow for BodyMaps CT inference demos"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1",
  "nibabel>=5.3,<6",
  "numpy>=2,<3",
  "pillow>=11,<13",
  "python-multipart>=0.0.20,<1",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8,<10",
  "ruff>=0.11,<1",
]

[project.scripts]
bodymaps = "bodymaps_demo.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bodymaps_demo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

